<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_attendancelogo"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="Attendance Manager"
                android:textColor="@color/colorTextWhite"
                android:textSize="28sp"
                tools:ignore="HardcodedText,UnusedAttribute" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui"
                android:text="It's easy and quick!"
                android:textColor="@color/colorTextWhite"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                tools:ignore="HardcodedText,UnusedAttribute" />

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/card_background"
        android:elevation="40dp"
        tools:ignore="UnusedAttribute">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/sign_up"
            android:textColor="@color/colorTextBlack"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorPlaceHolder"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorPlaceHolder"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorPlaceHolder"
                tools:ignore="Autofill" />

            <RadioGroup
                android:id="@+id/gender_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_marginTop="14dp"
                >

                <RadioButton
                    android:id="@+id/gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="18sp"
                    android:fontFamily="@font/segoe_ui"
                    android:textColor="@color/colorTextBlack"
                    android:buttonTint="@color/colorBlack"
                    android:layout_weight="1"/>

                <RadioButton
                    android:id="@+id/gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="18sp"
                    android:fontFamily="@font/segoe_ui"
                    android:textColor="@color/colorTextBlack"
                    android:buttonTint="@color/colorBlack"
                    android:layout_weight="1"/>

            </RadioGroup>



                <Button
                    android:id="@+id/btnSignup"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/segoe_ui"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/colorButtonText"
                    android:textSize="16sp"
                    android:layout_marginTop="14dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="48dp"
                    />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="22dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/already_have_an_account"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/log_in"
                android:layout_marginLeft="12dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp"
                android:layout_marginStart="12dp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_centerInParent="true"
            android:background="@drawable/loading_dialog_background"
            android:padding="12dp"
            android:visibility="gone"
            android:progressBackgroundTint="@color/colorPrimary"
            android:elevation="12dp"/>

    </RelativeLayout>

</LinearLayout>